<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VenueBooking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">User</string>
    <string name="name">UserName</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign">signin</string>
    <string name="venue">Venue Provider</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_usersign">UsersignActivity</string>
    <string name="reg">Registration form</string>
    <string name="cpwd">confirm password</string>
    <string name="phn">Mobile no</string>
    <string name="submit">submit</string>
    <string name="title_activity_venuesign">VenuesignActivity</string>
    <string name="venuen">VenueName</string>
    <string name="add">Address</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_venuelogin">VenueloginActivity</string>
    <string name="user1">new user?</string>
    <string name="title_activity_venuedetails">VenuedetailsActivity</string>
    <string name="text">Enter the Venue Details</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="title_activity_venue1">Venue1Activity</string>

    <color name="black">#000</color>

    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_venuebook">VenuebookActivity</string>
    <string name="title_activity_userdetails">UserdetailsActivity</string>
    <string name="title_activity_image">ImageActivity</string>

</resources>
